ingress/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: what-is-my-pod
  name: what-is-my-pod
  namespace: default
spec:
  ports:
    - port: 8080
  selector:
    app: what-is-my-pod
